--- a/web/app/frontend/static/my.css
+++ b/web/app/frontend/static/my.css
@@ -100,6 +100,7 @@ body {
 }
 
 .company-title {
+    margin: 30px 0 10px 5px;
     font-family: "Helvetica Neue",Arial,sans-serif;
     font-size: 16px;
     font-weight: 500;
@@ -107,6 +108,7 @@ body {
 }
 
 .broker-title {
+    margin: 30px 0 10px 5px;
     font-family: "Helvetica Neue",Arial,sans-serif;
     font-size: 16px;
     font-weight: 500;
